# dj-stripe

./: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  ROLLING_NOTES.rst  changes.md  docker-compose.yaml  index.html  makemigrations.py  manage.py  mkdocs.yml  ngrok.sh  pyproject.toml  requirements.txt  requirements_test.txt  runtests.py  sample.py  setup.cfg  setup.py  test_db.sqlite3-journal  tox.ini  versions.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: api-change-notice.md  bug_report.md  config.yml  documentation-issue-request.md  feature-or-enhancement-proposal.md  general-bug.md  how-to-usage-question.md  issue-with-webhooks-or-sync.md  migration-upgrade-issue.md  other-issue.md  webhooks-sync-bug.md
.github/install_poetry_action/: action.yaml
.github/workflows/: auto-assign.yaml  ci.yml  codeql-analysis.yml  docs.yaml  docs.yml  install-poetry.yaml  linting.yml  pre-commit-autoupdate.yaml  pre-commit-autoupdate.yml  release.yml  stale.yml  sync-docs-content.yml
2.4/: 404.html  index.html  objects.inv  search.html  sitemap.xml
2.4/CONTRIBUTING/: index.html
2.4/api_keys/: index.html
2.4/api_versions/: index.html
2.4/installation/: index.html
2.4/search/: search_index.json
2.4/stripe_elements_js/: index.html
2.5/: 404.html  index.html  objects.inv  search.html  sitemap.xml
2.5/CONTRIBUTING/: index.html
2.5/api_keys/: index.html
2.5/api_versions/: index.html
2.5/installation/: index.html
2.5/search/: search_index.json
2.5/stripe_elements_js/: index.html
2.6/: 404.html  index.html  search.html  sitemap.xml
2.6/CONTRIBUTING/: index.html
2.6/api_keys/: index.html
2.6/api_versions/: index.html
2.6/installation/: index.html
2.6/js/: version-select.js
2.6/stripe_elements_js/: index.html
2.7/: 404.html  index.html  sitemap.xml
2.7/CONTRIBUTING/: index.html
2.7/installation/: index.html
2.7/search/: search_index.json
2.7/stripe_elements_js/: index.html
djstripe/: __about__.py  __init__.py  _stripe_compat.py  _stripe_errors.py  admin.py  apps.py  checks.py  constants.py  context_managers.py  context_processors.py  decorators.py  enums.py  event_handlers.py  exceptions.py  fields.py  forms.py  http_client.py  key_managers.py  managers.py  middleware.py  mixins.py  models.py  rest_urls.py  restviews.py  restviews.py.orig  runtests.py  safe_settings.py  serializers.py  settings.py  signals.py  stripe_objects.py  sync.py  urls.py  utils.py  viewmixins.py  views.py  webhook.py  webhooks.py  widgets.py
djstripe/admin/: __init__.py  actions.py  admin.py  admin_inline.py  filters.py  forms.py  utils.py  views.py  widgets.py
djstripe/admin_d/: admin_inline.py  forms.py  views.py
djstripe/backends/: __init__.py  backend.py  default.py
djstripe/contrib/: __init__.py
djstripe/management/: __init__.py  utils.py
djstripe/migrations/: 0001_initial.py  0001_squashed_0007_for_custom_subscriber_model.py  0002_2_10.py  0002_account_djstripe_data_apikey_djstripe_data_and_more.py  0002_auto_20150121_0430.py  0002_auto_20150122_2000.py  0002_auto_20180626_1816.py  0002_auto_20180627_1121.py  0002_auto__add_field_currentsubscription_cancel_at_period_end.py  0002_card_customer_from_source.py  0003_2_11.py  0003_auto_20150128_0800.py  0003_auto_20181101_2220.py  0003_auto_20181117_0143.py  0003_auto_20181117_2328.py  0003_auto_20181117_2328_squashed_0004_auto_20190227_2114.py  0003_auto_20181118_2105.py  0003_auto_20190130_1302.py  0003_productfeature.py  0003_rename_tolerance_webhookendpoint_djstripe_tolerance.py  0004_2_1.py  0004_3_0.py  0004_auto_20150427_1609.py  0004_auto_20190227_2114.py  0004_auto_20190306_1344.py  0004_auto_20190612_0850.py  0004_auto__add_subscription__chg_field_customer_user.py  0004_auto__del_field_customer_user__add_field_customer_related_model.py  0004_rename_validation_method_webhookendpoint_djstripe_validation_method.py  0005_2_2.py  0005_auto_20190703_0958.py  0005_auto_20190710_1023.py  0005_auto_20191002_1012.py  0005_charge_captured.py  0005_copy_subscriptions.py  0006_2_3.py  0006_add_subscription.py  0006_auto_20150602_1934.py  (+276 more)
docs/: CONTRIBUTING.md  Makefile  README.md  api_keys.md  api_versions.md  api_versions.rst  conf.py  cookbook.rst  django_settings.py  index.md  index.rst  installation.md  installation.rst  migrating_to_djstripe.rst  models.rst  requirements.txt  settings.md  settings.rst  stripe_elements_js.md  stripe_elements_js.rst  support.rst  upgrade_dj_stripe.md  usage.rst
korbit_review/: settings.py  test_account.py  test_bank_account.py  test_charge.py  test_coupon.py  test_enums.py  test_event.py  test_file_upload.py  test_idempotency_keys.py  test_invoice.py  test_managers.py
korbit_review_2/: test_product.py  test_refund.py  test_session.py  test_settings.py  test_shipping_rate.py  test_subscription.py  test_subscription_item.py  test_sync.py  test_tax_id.py  test_transfer.py  test_webhooks.py
korbit_reviews/: enums.py  fields.py
master/: 404.html  index.html  objects.inv  search.html  sitemap.xml
sql/: utils.py
tests/: __init__.py  asserts.py  conftest.py  plan_instances.py  requirements.txt  settings.py  stripe_world.py  test_account.py  test_account_v2.py  test_admin.py  test_allauth_integration.py  test_api_keys.py  test_apikey.py  test_backend.py  test_balance_transaction.py  test_bank_account.py  test_bankaccount.py  test_card.py  test_charge.py  test_checks.py  test_context_managers.py  test_context_processors.py  test_coupon.py  test_customer.py  test_decorators.py  test_discount.py  test_dispute.py  test_dj-stripe.py  test_django.py  test_djstripe_tags.py  test_email.py  test_enums.py  test_event.py  test_event_handlers.py  test_event_processing_exception.py  test_exceptions.py  test_fields.py  test_file_link.py  test_file_upload.py  test_forms.py  (+58 more)
(+502 files in other folders)
