[tool.poetry]
name = "dj-stripe"
version = "2.9.0"
description = "Django + Stripe made easy"
license = "MIT"
authors = [
    "Alexander Kavanaugh <alex@kavdev.io>",
    "Jerome Leclanche <jerome@leclan.ch>",
    "Abe Hanoka <abe@habet.dev>",
]
readme = "docs/README.md"
homepage = "https://dj-stripe.dev"
repository = "https://github.com/dj-stripe/dj-stripe"
documentation = "https://dj-stripe.dev/dj-stripe/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]

packages = [{ include = "djstripe" }]
include = ["AUTHORS.md", "CONTRIBUTING.md", "HISTORY.md", "LICENSE"]
exclude = ["manage.py"]

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/dj-stripe"


[tool.poetry.dependencies]
python = "^3.10.0"
django = ">=4.2"
stripe = ">=8.0.0"
psycopg = { version = "^3.2.3", optional = true }
mysqlclient = { version = ">=1.4.0", optional = true }

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
mypy = ">=1.13.0"
pre-commit = "^4.0.1"
pytest = ">=8.3.4"
pytest-django = ">=4.9.0"
ruff = "^0.8.2"

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.47"
mkdocs-autorefs = "^1.2.0"
mkdocstrings = { extras = ["python"], version = "^0.27.0" }
mike = "^2.1.3"
jinja2 = "^3.1.4"


[tool.poetry.group.ci]
optional = true
[tool.poetry.group.ci.dependencies]
coverage = { version = "^7.6.8", extras = ["toml"] }
tox = "^4.23.2"
tox-gh-actions = "^3.2.0"

[tool.poetry.extras]
postgres = ["psycopg"]
mysql = ["mysqlclient"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry_core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["F", "FURB", "UP"]
