[project]
name = "dj-stripe"
version = "2.10.1"
description = "Django + Stripe made easy"
license = "MIT"
authors = [
    { name = "Alexander Kavanaugh", email = "alex@kavdev.io" },
    { name = "Jerome Leclanche", email = "jerome@leclan.ch" },
    { name = "Abe Hanoka", email = "abe@habet.dev" },
]
readme = "docs/README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
]
dependencies = [
    "django>=5.2",
    "stripe>=15.0.1,<16",
]

[project.optional-dependencies]
postgres = ["psycopg>=3.3.4,<4"]
mysql = ["mysqlclient>=2.2.0"]

[project.urls]
Homepage = "https://dj-stripe.dev"
Repository = "https://github.com/dj-stripe/dj-stripe"
Documentation = "https://dj-stripe.dev/dj-stripe/"
Funding = "https://github.com/sponsors/dj-stripe"

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.5,<7",
    "mypy>=2.1.0,<3",
    "pre-commit>=4.6.0,<5",
    "pytest>=9.1.1,<10",
    "pytest-django>=4.12.0,<5",
    "pytest-dotenv>=0.5.2,<0.6",
    "ruff>=0.15.18,<0.16",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.7.6,<10",
    "mkdocs-autorefs>=1.4.4,<2",
    "mkdocstrings[python]>=1.0.4,<2",
    "mike>=2.2.0,<3",
    "jinja2>=3.1.6,<4",
]
ci = [
    "coverage[toml]>=7.14.1,<8",
    "tox>=4.55.1,<5",
    "tox-gh>=1.7.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["djstripe"]

[tool.hatch.build.targets.sdist]
include = [
    "/djstripe",
    "/CONTRIBUTING.md",
    "/LICENSE",
]

[tool.ruff.lint]
select = ["F", "FURB", "UP"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
warn_unused_ignores = true

# The admin, management command and migration modules lean heavily on Django's
# dynamic runtime behaviour, which django-stubs cannot model without a large
# number of ignores. Type checking is enforced on the core model layer only.
[[tool.mypy.overrides]]
module = [
    "djstripe.admin.*",
    "djstripe.management.*",
    "djstripe.migrations.*",
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.tox]
isolated_build = true
envlist = [
    "django{52,60}-py{312,313}-{postgres,sqlite}",
    "django52-py311-{postgres,sqlite}",
    "django60-py314-{postgres,sqlite}",
    "djangomain-py314-postgres",
]
skip_missing_interpreters = true

[tool.tox.gh.python]
"3.14" = ["py314"]
"3.13" = ["py313"]
"3.12" = ["py312"]
"3.11" = ["py311"]

[tool.tox.testenv]
passenv = ["DJSTRIPE_*"]

commands = ["pytest {posargs}"]
deps = [
    "pytest-django",
    "pytest-cov",
    "pytest-dotenv",
    "django52: Django>=5.2,<6.0",
    "django60: Django>=6.0,<6.1",
    "djangomain: https://github.com/django/django/archive/main.tar.gz",
    "postgres: psycopg>=3.3.4",
]

[tool.tox.testenv.setenv]
postgres = "DJSTRIPE_TEST_DB_VENDOR=postgres"
sqlite = "DJSTRIPE_TEST_DB_VENDOR=sqlite"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
markers = ["stripe_api: mark a test as using Stripe API."]
env_files = [".env"]

[tool.coverage.run]
branch = true
source = ["djstripe"]
omit = [
    "djstripe/migrations/*",
    "djstripe/management/*",
    "djstripe/admin.py",
    "djstripe/checks.py",
]

[tool.coverage.html]
directory = "cover"
