[metadata]
name = dj-stripe
version = 2.1.1
description = Django + Stripe Made Easy
author = Alexander Kavanaugh
author_email = alex@kavdev.io
url = https://github.com/dj-stripe/dj-stripe/
download_url = https://github.com/dj-stripe/dj-stripe/tarball/master
long_description_content_type = text/x-rst
keywords = django, stripe, payments
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Office/Business :: Financial
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    Django >= 2.1
    jsonfield >= 2.0.2
    # >= 2.32.0 needed for stripe.SetupIntent
    # avoid 2.36.0, see https://github.com/dj-stripe/dj-stripe/issues/991
    stripe >= 2.32.0, != 2.36.0

[options.packages.find]
exclude =
    docs
    tests
    tests.*

[bdist_wheel]
universal = 1
